enhance login API with comprehensive validation and structured responses